--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="diploma.edu.zp.guide_my_own.MainActivity"
+    tools:context="diploma.edu.zp.guide_my_own.activity.MainActivity"
     tools:showIn="@layout/app_bar_main" />
