--- a/app/src/main/res/layout/fragment_create_place.xml
+++ b/app/src/main/res/layout/fragment_create_place.xml
@@ -21,4 +21,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvTakePicture" />
 
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Save"
+        android:textSize="18sp"/>
+
 </android.support.percent.PercentRelativeLayout>
