--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,11 @@
         <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/map" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_my_places"
+            android:icon="@drawable/ic_place_black_24dp"
+            android:title="@string/my_places" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
