--- a/app/src/main/res/layout/row_places_list.xml
+++ b/app/src/main/res/layout/row_places_list.xml
@@ -8,9 +8,9 @@
         android:id="@+id/ivPicture"
         android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="300dp" />
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvCategory"
         android:layout_gravity="center"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
