--- a/app/src/main/res/layout/row_places_list.xml
+++ b/app/src/main/res/layout/row_places_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
@@ -8,12 +8,16 @@
         android:id="@+id/ivPicture"
         android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="wrap_content" />
     <TextView
+        android:layout_below="@+id/ivPicture"
         android:id="@+id/tvCategory"
-        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:layout_width="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</LinearLayout>
+</RelativeLayout>
