--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="LighterGray">#F4F4F4</color>
     <color name="white">#ffffff</color>
+    <color name="Gray">#777777</color>
+    <color name="a_100">#f50057</color>
 </resources>
