--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#ffffff</color>
     <color name="Gray">#777777</color>
     <color name="a_100">#f50057</color>
+    <color name="black">#000000</color>
 </resources>
