--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="Gray">#777777</color>
     <color name="a_100">#f50057</color>
     <color name="black">#000000</color>
+    <color name="gray">#222222</color>
 </resources>
