--- a/app/src/main/res/layout/fragment_create_place.xml
+++ b/app/src/main/res/layout/fragment_create_place.xml
@@ -60,8 +60,20 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/btnTakePicture"/>
 
+        <EditText android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="@string/description"
+                  android:theme="@style/MyEditText"
+                  android:id="@+id/etDescr"
+                  android:maxLines="5"
+                  android:lines="5"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginBottom="16dp"
+                  android:layout_centerHorizontal="true"
+                  android:layout_below="@+id/etTitle"/>
+
         <Button
-            android:layout_below="@+id/etTitle"
+            android:layout_below="@+id/etDescr"
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             style="@style/Widget.AppCompat.Button.Colored"
