--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -45,7 +45,7 @@
         android:text="SUPER"
         android:textColor="#000"
         android:textSize="48sp" />-->
-    <RelativeLayout
+ <!--   <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -63,7 +63,7 @@
             android:layout_height="150dp"
             app:srcCompat="@drawable/mypic" />
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
 
 
