--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,13 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
+
+
+
+    <style name="ToolBarStyle" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@android:color/transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white_24dp</item>
+    </style>
+
 </resources>
