--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,9 @@
     <dimen name="camera_padding">60dp</dimen>
     <dimen name="anchor_point">300dp</dimen>
     <dimen name="bottom_sheet_peek_height">80dp</dimen>
+
+
+    <dimen name="standard_55">55dp</dimen>
+    <dimen name="standard_105">105dp</dimen>
+    <dimen name="standard_155">155dp</dimen>
 </resources>
