--- a/app/src/main/res/layout/fragment_fb.xml
+++ b/app/src/main/res/layout/fragment_fb.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/fb"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/fbFragment">
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
