--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/camera_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <RelativeLayout
+        android:id="@+id/rlCamera"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:id="@+id/rlCamera">
+        android:layout_height="match_parent">
 
-        <diploma.edu.zp.guide_my_own.camera2.AutoFitTextureView
+        <diploma.edu.zp.guide_my_own.view.AutoFitTextureView
             android:id="@+id/texture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            />
 
+        <ImageView
+            android:id="@+id/btnHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp"
+            app:srcCompat="@drawable/ic_arrow_back_white_24dp"
+            android:contentDescription="TODO" />
     </RelativeLayout>
 
     <FrameLayout
@@ -27,11 +38,7 @@
         android:layout_height="112dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/control_background"
-        >
-
-
-
+        android:background="@color/control_background">
 
         <Button
             android:id="@+id/picture"
